--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 * {
   box-sizing: border-box;
-  margin: 0;
+  margin: 4;
   padding: 0;
   font-family: Helvetica, sans-serif;
   /* font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
@@ -8,22 +8,18 @@
 }
 
 body {
-  background: linear-gradient(
-    90deg,
-    rgba(194, 159, 144, 1) 0%,
-    rgba(219, 165, 65, 1) 100%
-  );
+  background: linear-gradient(to top, #AC3B61, #EDC7B7 50%, #fff 80%, #AC3B61 75%);
 }
 
 .App {
-  display: flex;
+  display: flex-start;
   flex-direction: column;
-  justify-content: start;
+  justify-content: flex-start;
   width: 80%;
   min-height: 600px;
   background: #eee2dc;
   text-align: center;
-  margin: 128px auto;
+  margin: 64px auto;
   border-radius: 10px;
   padding: 32px;
 }
