responsiveness and clean up. Line graph added

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,10 +2,9 @@
   box-sizing: border-box;
   margin: 4;
   padding: 0;
-  font-family: Helvetica, sans-serif;
+  font-family: 'Graphik LCG Web', sans-serif;
 }
 
 body {
-  /* background: linear-gradient(to top, #AC3B61, #EDC7B7 50%, #fff 80%, #db997a 75px); */
   background: radial-gradient(79.97% 124.8% at 80.57% 44.85%, rgba(43, 212, 219, 0.243) 0%, rgba(43, 212, 219, 0) 100%), rgb(12, 17, 66);
 }
